--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -15,7 +15,7 @@
 		<div class="flex-ns justify-between">
 
 			<div>
-				<h3 class="f4 b lh-title mb1 primary">Kaldi</h3>
+				<h3 class="f4 b lh-title mb1 primary">Hostingcloud.Host</h3>
 				<ul class="mb3">
 					<li><a href="/" class="link">Home</a></li>
 					<li><a href="/products" class="link">Our products</a></li>
