--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -18,10 +18,10 @@
 				<h3 class="f4 b lh-title mb1 primary">Hostingcloud.Host</h3>
 				<ul class="mb3">
 					<li><a href="/" class="link">Home</a></li>
-					<li><a href="/products" class="link">Our products</a></li>
+					<li><a href="/products" class="link">Produk</a></li>
 					<li><a href="/values" class="link">About</a></li>
 					<li><a href="/post" class="link">Blog</a></li>
-					<li><a href="/contact" class="link">Contact</a></li>
+					<li><a href="/contact" class="link">Kontak</a></li>
 				</ul>
 			</div>
 
