--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -28,8 +28,8 @@
 			<div>
 				<h3 class="f4 b lh-title mb1 primary">Find out more</h3>
 				<ul class="mb3">
-					<li><a href="/post/jamaica-blue/" class="link">Latest offers</a></li>
-					<li><a href="/contact" class="link">Schedule and appointment</a></li>
+					<li><a href="/post/" class="link">Updet</a></li>
+					<li><a href="/contact" class="link">Konsultasi</a></li>
 				</ul>
 			</div>
 
@@ -39,7 +39,7 @@
 					{{ partial "social-icon" (dict "link" "https://www.facebook.com/wisefxcorp/" "svg" "icons-facebook") }}
 					{{ partial "social-icon" (dict "link" "https://twitter.com/sagakom" "svg" "icons-twitter") }}
 					{{ partial "social-icon" (dict "link" "https://www.instagram.com/cakmat625/" "svg" "icons-instagram") }}
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-vimeo") }}
+					{{ partial "social-icon" (dict "link" "https://www.youtube.com/playlist?list=PLNN6DwlE7IdkjgHRZg4WO0t-SF5YslPeD" "svg" "icons-vimeo") }}
 				</ul>
 			</div>
 
